# BrainDump

./: .env.example  .gitignore  Dockerfile  auth.py  chat.py  dashboard_prd.md  followup_engine.py  models.py  prd.md  pyproject.toml  railway.toml  requirements.txt  schema.sql  server.py  test_connections.py  ui.py
static/: index.html
storage/: __init__.py  db.py  pg_db.py  pg_vectors.py  vectors.py
